--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "build": "cross-env NODE_ENV=production webpack"
   },
   "dependencies": {
+    "@babel/preset-typescript": "^7.16.0",
+    "@types/react-dom": "^17.0.11",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
@@ -25,6 +27,7 @@
     "react-refresh": "^0.11.0",
     "sass-loader": "^12.3.0",
     "style-loader": "^3.3.1",
+    "typescript": "^4.5.2",
     "webpack": "^5.64.4",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.6.0"
